--- a/manifest/frontend/4.frontend.yaml
+++ b/manifest/frontend/4.frontend.yaml
@@ -16,7 +16,7 @@ spec:
         app: frontend
     spec:
       containers:
-        - image: jungjunsung/webtest:23.0
+        - image: jungjunsung/qna-web:v1.0
           name: front
           volumeMounts:
             - mountPath: /etc/localtime
