--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Commit and push changes
         if: |
           steps.changed-files.outputs.all_changed_files != '' &&
-          (contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/')
+          (contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/'))
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
