--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Determine frontend image version
         if: ${{ steps.changed-files.outputs.all_changed_files != '' && contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/') }}
