--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,28 +29,22 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Determine frontend image version
-        if: ${{ steps.changed-files.outputs.all_changed_files != '' && contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/') }}
         id: frontend-version
         run: |
-          CURRENT_VERSION=$(grep -oP 'jungjunsung/qna-web:\K[0-9]+\.[0-9]+' manifest/frontend/4.frontend.yaml)
+          CURRENT_VERSION=$(grep -oP 'jungjunsung/qna-web:v\K[0-9]+\.[0-9]+' manifest/frontend/4.frontend.yaml)
           if [ -z "$CURRENT_VERSION" ]; then
             CURRENT_VERSION=1.0
           fi
           NEW_VERSION=$(echo $CURRENT_VERSION + 1.0 | bc)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
       - name: Build and Push Frontend Image
-        if: ${{ steps.changed-files.outputs.all_changed_files != '' && contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/') }}
         run: |
-          docker build -t jungjunsung/qna-web:${{ env.NEW_VERSION }} cicd-qna-frontend
-          docker push jungjunsung/qna-web:${{ env.NEW_VERSION }}
+          docker build -t jungjunsung/qna-web:v${{ env.NEW_VERSION }} cicd-qna-frontend
+          docker push jungjunsung/qna-web:v${{ env.NEW_VERSION }}
       - name: Update frontend.yaml
-        if: ${{ steps.changed-files.outputs.all_changed_files != '' && contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/') }}
         run: |
-          sed -i 's|image: jungjunsung/qna-web:.*|image: jungjunsung/qna-web:${{ env.NEW_VERSION }}|' manifest/frontend/4.frontend.yaml
+          sed -i 's|image: jungjunsung/qna-web:v.*|image: jungjunsung/qna-web:v${{ env.NEW_VERSION }}|' manifest/frontend/4.frontend.yaml
       - name: Commit and push changes
-        if: |
-          steps.changed-files.outputs.all_changed_files != '' &&
-          (contains(steps.changed-files.outputs.all_changed_files, 'cicd-qna-frontend/'))
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
